--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ buildscript {
     }
     dependencies {
         classpath "org.jetbrains.dokka:dokka-gradle-plugin:0.9.17"
-        classpath 'com.vanniktech:gradle-maven-publish-plugin:0.13.0'
+        // classpath 'com.vanniktech:gradle-maven-publish-plugin:0.13.0'
     }
 }
 
@@ -19,10 +19,10 @@ group 'de.debuglevel.commons.microservice'
 version '0.0.1-SNAPSHOT'
 
 apply plugin: "java-library"
-apply plugin: "maven-publish"
-apply plugin: "maven"
+// apply plugin: "maven-publish"
+// apply plugin: "maven"
 apply plugin: 'org.jetbrains.dokka'
-apply plugin: 'com.vanniktech.maven.publish'
+// apply plugin: 'com.vanniktech.maven.publish'
 
 repositories {
     mavenCentral()
@@ -38,9 +38,9 @@ dependencies {
     implementation 'org.slf4j:slf4j-simple:1.7.25'
 }
 
-ext["signing.keyId"] = System.getenv('SIGNING_KEY_ID')
-ext["signing.password"] = System.getenv('SIGNING_PASSWORD')
-ext["signing.secretKeyRingFile"] = System.getenv('SIGNING_SECRET_KEY_RING_FILE')
+// ext["signing.keyId"] = System.getenv('SIGNING_KEY_ID')
+// ext["signing.password"] = System.getenv('SIGNING_PASSWORD')
+// ext["signing.secretKeyRingFile"] = System.getenv('SIGNING_SECRET_KEY_RING_FILE')
 
 // Configuration of net.researchgate.release plugin
 release {
