--- a/gradle.properties
+++ b/gradle.properties
@@ -5,6 +5,6 @@ kotlin.code.style=official
 GROUP=de.debuglevel.commons.microservice
 POM_ARTIFACT_ID=microservice-commons
 VERSION_NAME=0.0.1-SNAPSHOT
-## TODO: probably needed until com.vanniktech:gradle-maven-publish-plugin:0.14 is released
-RELEASE_REPOSITORY_URL=https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/
-SNAPSHOT_REPOSITORY_URL=https://s01.oss.sonatype.org/content/repositories/snapshots/
+# ## TODO: probably needed until com.vanniktech:gradle-maven-publish-plugin:0.14 is released
+# RELEASE_REPOSITORY_URL=https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/
+# SNAPSHOT_REPOSITORY_URL=https://s01.oss.sonatype.org/content/repositories/snapshots/
